All done project

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -21,3 +21,8 @@ span.form-error-icon.badge.badge-danger.text-uppercase {
     width: 0;
     padding: 0;
 }
+
+.disabled-button {
+    pointer-events: none;
+    opacity: 0.4;
+}
